changed the logo and deployed to firebase but app doesn't show at url, maybe delay on firbase side, don't know, will check again later

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us" ng-app="app">
   <head>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="logo_favicon.png">
       <title>Parentheses Checker</title>
       <meta http-equiv="X-UA-Compatible" content="IE=Edge">
       <meta charset="UTF-8">
@@ -28,7 +28,7 @@
 
 			<div class="navbar-header">
 				<!-- <a class="navbar-brand" href="/">AngularJS</a> -->
-        <a href="http://axonetiq.com" target="blank"> <img id="icon" src="favicon.ico" alt=""> </a>
+        <a href="http://axonetiq.com" target="blank"> <img id="icon" src="logo_favicon.png" alt=""> </a>
 			</div>
 
 		</nav>
